--- a/src/app/imc-faixa-etaria/imc-faixa-etaria.component.html
+++ b/src/app/imc-faixa-etaria/imc-faixa-etaria.component.html
@@ -6,7 +6,7 @@
         <div class="card-body">
             <h5 class="card-title">IMC médio por faixa etária</h5>    
     
-            <div class="row" style="margin-bottom: 20px;">
+            <div class="row">
     
               <div class="col-12">
                 <table class="table">
